# web3

./: .gitignore  README.md
rust/10 generic traits lifetimes/: 10-1  10-1.rs  10-3
rust/10 generic traits lifetimes/generics/: 10-5.rs  10-6  10-6.rs
rust/10 generic traits lifetimes/lifetimes/: 10-19.rs  10-24  10-24.rs
rust/10 generic traits lifetimes/traits/: 10-13  10-13.rs  10-15.rs
rust/15 smart pointers/: 15-1-using-boxt  15-1-using-boxt.rs  15-2.rs  15-24  15-24.rs  15-6  15-6.rs  15-8.rs  15.1-using-boxt.rs
rust/16 Fearless Concurrency/: 16-1  16-10  16-11  16-11.rs  16-12  16-13.rs  16-2  16-2.rs  16-5  16-5.rs  16-6.rs  16-7  16-7.rs  16-8
rust/3. data-types/: functionWithReturnValue  ifAndLet.rs  invalidArrayElementAccess.rs  loop2.rs  loopCollection.rs  whileLoop.rs
rust/4. understanding ownership/: owndershipAndFunctions  owndershipAndFunctions.rs
rust/EmailNewsletter/: README.md
rust/EmailNewsletter/zero2prod/: Cargo.toml
rust/EmailNewsletter/zero2prod/src/: main.rs
rust/EmailNewsletter/zero2prod/tests/: health_check.rs
rust/The Rust Programming Language/10 generic traits lifetimes/: 10-1.rs  10-3.rs
rust/The Rust Programming Language/15 smart pointers/: 15-1-using-boxt.rs  15-10.rs  15-19  15-19.rs  15-3.rs  15-5  15-6  15-9.rs
rust/The Rust Programming Language/16 Fearless Concurrency/: 16-1.rs  16-10.rs  16-12.rs  16-2
rust/The Rust Programming Language/3. data-types/: functionWithReturnValue.rs  ifAndLet  ifElse  ifElse.rs  loop1  (+4 more)
solana/Introduction to cryptography and Solana clients/: .gitignore
solidity/: zombiesdna.sol
(+54 files in other folders)
