[package]
name = "zero2prod"
version = "0.1.0"
authors = ["anandvimal <deepak.sandhu789@gmail.com>"]
edition = "2024"

[lib]
# if unspecified (name), cargo will default 'package.name', as the library name.
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
